# i3c-core

./: .buildinfo  .ci.yml  .gitignore  .gitmodules  Makefile  README.md  activate.sh  axi_id_filtering.html  axi_recovery_flow.html  ccc.html  ci_queues.html  config.html  controller_interfaces.html  controller_phy.html  controller_standby.html  coverview.html  dv.html  ext_cap.html  genindex.html  i3c_core_configs.yaml  index.html  initialization.html  install.sh  integration.html  introduction.html  known_limitations.html  normal_operation.html  objects.inv  overview.html  phy.html  recovery_flow.html  registers.html  requirements.txt  searchindex.js  setenv.sh  testing.html  testplans_blocks.md  testplans_core.md  timings.html  top.html  (+1 more)
.github/workflows/: build-docs.yml  tests-and-docs.yml  tests.yml
_downloads/4cbf1e0840e968a3603e578833a191d4/: i3c_core_configs.yaml
_downloads/d68f7a594a4d705093080b00c0c5d709/: timing.py
_sources/: axi_id_filtering.md.txt  axi_recovery_flow.md.txt  config.md.txt  controller_interfaces.md.txt  dv.md.txt  ext_cap.md.txt  index.md.txt  initialization.md.txt  integration.md.txt  introduction.md.txt  overview.md.txt  phy.md.txt  recovery_flow.md.txt  testing.md.txt  timings.md.txt  top.md.txt
doc/: cts-list.md  requirements.txt
doc/source/: axi_id_filtering.md  axi_recovery_flow.md  ccc.md  conf.py  dv.md  index.md  introduction.md  known_limitations.md  phy.md  registers.md
docs/: requirements.txt
docs/source/: ci_queues.md  conf.py  controller_phy.md  controller_standby.md  dv.md  ext_cap.md  index.md  initialization.md  integration.md  normal_operation.md  recovery_flow.md  testing.md  timings.md  top.md
sim-results/: axi_filtering.html  bus_monitor.html  bus_rx_flow.html  bus_timers.html  bus_tx.html  bus_tx_flow.html  ccc.html  cov.css  csr_sw_access.html  descriptor_rx.html  descriptor_tx.html  drivers.html  edge_detector.html  flow_standby_i3c.html  hci_queues.html  i3c_bus_monitor.html  index-blocks.html  index-top.html  index.html  main.css  pec.html  target.html  target_bus_stall.html  target_ccc.html  target_csr_access.html  target_error_detection.html  target_hdr.html  target_interrupts.html  target_recovery.html  target_recovery_bypass.html  target_reset.html  tti_queues.html  width_converter_8toN.html  width_converter_Nto8.html
src/: ccc.svh  i2c_fsm.sv  i2c_phy_integration.sv  i2c_shim.sv  i3c.f  i3c.sv  i3c_controller.f  i3c_ctrl.sv  i3c_ctrl_pkg.sv  i3c_defines.svh  i3c_pkg.sv  i3c_sdr_pkt_gen.sv  i3c_target.f  i3c_top.sv  i3c_wrapper.sv  interrupt.sv
src/csr/: Documentation.md  I3CCSR.sv  I3CCSR_covergroups.svh  I3CCSR_pkg.sv  I3CCSR_sample.svh  I3CCSR_uvm.sv  registers_covergroups.svh  registers_sample.svh  registers_uvm.sv
src/ctrl/: addr_match.sv  bus_monitor.sv  bus_rx_flow.sv  bus_state.sv  bus_timers.sv  bus_tx.sv  bus_tx_flow.sv  ccc.sv  ccc_entdaa.sv  configuration.sv  controller.sv  controller_active.sv  controller_pkg.sv  controller_standby.f  controller_standby.sv  controller_standby_i2c.sv  controller_standby_i3c.f  controller_standby_i3c.sv  daa.sv  descriptor_ibi.sv  descriptor_rx.sv  descriptor_tx.sv  edge_detector.sv  feedback.sv  flow_active.sv  flow_standby.sv  flow_standby_i2c.sv  flow_standby_i3c.sv  i2c_controller_fsm.sv  i2c_controller_shim.sv  i2c_target_fsm.sv  i3c_bus_monitor.sv  i3c_controller_fsm.sv  (+12 more)
sw/: I3CCSR.h  i3c_csr_accessors.h  smoke_test_i3c.c  smoke_test_i3c.yml
testbench/: Makefile  tb.sv
tools/: sim_repeater.sh
tools/cocotb_helpers/: pyproject.toml
tools/cocotb_helpers/src/: cocotb_helpers.py
tools/nox_utils/: pyproject.toml
tools/nox_utils/src/: nox_utils.py
tools/peakrdl_cocotb/: pyproject.toml
tools/peakrdl_cocotb/src/peakrdl_cocotb/: __peakrdl__.py  cocotb_scanner.py  exporter.py
tools/vcd2pulseview/: README.md  pyproject.toml
tools/vcd2pulseview/src/: i3c_from_vcd.tcl  pulseview.cfg  vcd2pulseview.py
verification/: README.md  cm.cfg.tmpl  waivers.yaml
(+488 files in other folders)
