[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vcd2pulseview"
version = "0.1.0"
requires-python = ">=3.6"

authors = [
    {name = "Antmicro", email = "contact@antmicro.com"},
    {name = "Robert Szczepanski", email = "rszczepanski@antmicro.com"},
]
description = "Run a compatible waveform from the simulation generated VCD in a PulseView with the enabled decoder"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "tool", "pulseview", "gtkwave", "generator", "waveform", "viewer", "software",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.scripts]
vcd2pulseview = "vcd2pulseview:main"
